_k8s/proxy_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backoffice-proxy
  labels:
    app: backoffice-proxy
spec:
  replicas: 3
  selector:
    matchLabels:
      app: backoffice-proxy
  template:
    metadata:
      labels:
        app: backoffice-proxy
    spec:
      containers:
      - name: backoffice-proxy
        image: backoffice-proxy:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
