_k8s/proxy_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backoffice-proxy-svc
spec:
  selector:
    app: backoffice-proxy
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
