_k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backoffice-svc
spec:
  selector:
    app: backoffice
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
